<resources>
    <string name="app_name">Just mini calendar</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="upgrade_widget">Upgrade widget</string>
    <string name="no_events">There are no any events</string>
    <string name="month">Month</string>
    <string name="default_month">Jan</string>
    <string name="data">Data</string>
    <string name="default_data">1</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="calendar_activity_not_found">Calendar application was not found.</string>
    <string name="future_event_text_color">Text color of future events</string>
    <string name="events_background_color">Background color of events</string>
    <string name="add_widget">Add widget</string>
    <string name="event_text_size">Event text size</string>
    <string name="today_text_color">Text color of today\'s event</string>
    <string name="number_of_events_displayed">Number of events displayed</string>
    <string name="widget_name">Just mini calendar</string>
    <string name="settings">Settings</string>
    <string name="_5" translatable="false">5</string>
    <string name="_15" translatable="false">15</string>
    <string name="on_permissions_denied_msg">Events will not be shown.</string>
    <string name="read_calendar_rationale">Read calendar permission is needed to show events.</string>
    <string name="on_permissions_denied_permanently_msg">You denied permissions with option "NEVER ASK AGAIN". Events will not be shown. Reinstall app.</string>
    <string name="show_calendar_sheet">Show calendar sheet</string>
    <string name="month_text_size">Text size of month</string>
    <string name="month_text_color">Month text color</string>
    <string name="date_text_size">Text size of date</string>
    <string name="date_text_color">Today date text color</string>
    <string name="date_background_color">Date background color</string>
</resources>
