<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/calendar_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/calendar_data"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="#c1d0d6"
            android:contentDescription="@string/data"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/default_data"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/calendar_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#c1d0d6"
            android:contentDescription="@string/month"
            android:gravity="center_vertical|center_horizontal"
            android:minWidth="50dp"

            android:text="@string/default_month"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/events"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_events"
        android:textSize="20sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/calendar_sheet"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="invisible"
        tools:listitem="@layout/event" />

</RelativeLayout>