<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/calendar_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/calendar_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="#c1d0d6"
            android:contentDescription="@string/month"
            android:gravity="center_vertical|center_horizontal"
            android:minWidth="50dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/default_month"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/calendar_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c1d0d6"
            android:contentDescription="@string/data"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/default_data"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/events"
        android:layout_toEndOf="@+id/calendar_sheet"
        android:layout_toRightOf="@+id/calendar_sheet"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_events"
        android:textSize="20sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/calendar_sheet"
        android:layout_toRightOf="@+id/calendar_sheet"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="visible"
        tools:listitem="@layout/event" />

</RelativeLayout>